<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.yincheng.eyepetizer.viewmodels.LauncherViewModel" />
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_serial_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/ic_serial_tasks"
                    app:layout_constraintLeft_toLeftOf="parent" />

            <com.yincheng.eyepetizer.widgets.CountDownView
                    android:id="@+id/cdv_main"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:drawableStart="@drawable/anim_rotate_hourglass_full"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_parallel_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/ic_parallel_tasks"
                    app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.yincheng.eyepetizer.widgets.doublesideview.CompoundDrawerLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/csl_bottom_view_main"
                android:layout_below="@+id/appbar">

            <fragment
                    android:id="@+id/fragment_container"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:defaultNavHost="true"
                    app:navGraph="@navigation/navigation_main" />


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start">

                <com.yincheng.eyepetizer.widgets.FontTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/serial_task"
                        android:textColor="@color/unchecked"
                        android:textSize="30sp"
                        app:typeface="qingliuti"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end">

                <com.yincheng.eyepetizer.widgets.FontTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_hollow_rect_rounded_corner"
                        android:text="@string/parallel_task"
                        android:textColor="@color/unchecked"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.yincheng.eyepetizer.widgets.doublesideview.CompoundDrawerLayout>

        <RadioGroup
                android:id="@+id/csl_bottom_view_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/rb_analysis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    android:drawableTop="@drawable/selector_statistics"
                    android:gravity="center"
                    android:text="@string/statistics"
                    android:textColor="@color/selector_text_color"
                    android:textSize="12dp"
                    tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_trending"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="false"
                    android:drawableTop="@drawable/selector_trending"
                    android:gravity="center"
                    android:text="@string/trending"
                    android:textColor="@color/selector_text_color"
                    android:textSize="12dp"
                    tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="false"
                    android:drawableTop="@drawable/selector_settings"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/selector_text_color"
                    android:textSize="12dp"
                    tools:ignore="SpUsage" />
        </RadioGroup>

    </RelativeLayout>
</layout>